@@ -95,6 +95,8 @@ class FakeFactory(protocol.ServerFactory):
         class Transport:
             def loseConnection(self):
                 pass
+            def setTcpKeepAlive(self, val):
+                pass
         self.instance = pokernetwork.server.PokerServerProtocol()
         self.instance.transport = Transport()
         self.instance.verbose = 7
@@ -156,7 +158,6 @@ class ClientServer(unittest.TestCase):
         server = self.server_factory.instance
         def serverPingTimeout(val):
             self.assertEqual(search_output("ping: timeout Mr.Fakey/-1"), True)
-            restore_all_messages()
         client.connection_lost_deferred.addCallback(serverPingTimeout)
         silence_all_messages()
         return client.connection_lost_deferred
@@ -240,24 +241,35 @@ class ClientServer(unittest.TestCase):
         d = self.client_factory[0].established_deferred
         d.addCallback(self.deadServerTransport)
         return d
+#-------------------------------------------------------------------------------
 
-class InvalidProtocol(unittest.TestCase):
+# DummyServerTests are to cover code on the server that doesn't need a
+# client running to test it.
+
+class DummyServerTests(unittest.TestCase):
 
     def test01_invalidProtocol(self):
         self.server_factory = FakeFactory()
         silence_all_messages()
         self.server_factory.buildProtocol('addr').dataReceived("invalid protocol\n")
-        restore_all_messages()
         if verbose < 0: # can only grep output when output is redirected
             self.assertEqual(search_output('client with protocol UNKNOWN rejected'), True)
-
+    # -----------------------------------------------------------------------
+    def test02_pingRenew(self):
+        self.server_factory = FakeFactory()
+        server = self.server_factory.buildProtocol('addr')
+        server.protocolEstablished()
+        silence_all_messages()
+        server.ping()
+        self.assertEqual(search_output('ping: renew Mr.Fakey/-1'), True)
+ 
 # -----------------------------------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
 #    loader.methodPrefix = "test05"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(ClientServer))
-    suite.addTest(loader.loadClass(InvalidProtocol))
+    suite.addTest(loader.loadClass(DummyServerTests))
     return runner.TrialRunner(reporter.TextReporter,
 #                              tracebackFormat='verbose',
                               tracebackFormat='default',
